--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ djangorestframework==3.12.4
 factory-boy==3.2.0
 fuzzywuzzy==0.17.0
 numpy==1.18.2
+django-heroku==0.3.1
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
+django-cors-headers==3.5.0
+gunicorn==20.0.4
+whitenoise==5.2.0
